2.2 release deployment